style.css
/* ... */
.large-button:hover {
  background-color: transparent;
  border: 2px var(--blue) solid;
  border-color: var(--blue);
  color: var(--blue);
  transition: .2s ease;
}

a {
  color: var(--blue)
}

.landing {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  background-color: var(--red);
}

/* header css */

header {
  width: 80vw;
  padding: 25px 50px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  background-color: var(--cream);
  margin: 25px 0;
  border-radius: 15px;
}

#logo-header {
  height: 89px;
  width: auto;
}

#logo-header:hover {
  transform: scale(1.05);
  transition-duration: .2s
}

.nav-top {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 21px;
}

.nav-top a {
  text-transform: uppercase;
  text-decoration: none;
  font-weight: var(--bold);
  color: var(--blue);
  letter-spacing: 1px;
  font-size: 16px;
  transition: color 0.2s ease;
}

.nav-top a:hover {
  color: var(--red);
}

#xec-button {
  height: 3.5em;
  width: auto;
  transition: transform 0.2s ease;
}

#donate-button {
  height: 2.5em;
  width: auto;
  transition: transform 0.2s ease;
}

#vote-button {
  height: 3em;
  width: auto;
  transition: transform 0.2s ease;
}

#xec-button:hover,
#donate-button:hover,
#vote-button:hover {
  transform: scale(1.05);
}

.page-title {
  margin-bottom: 21px;
}

/* cover css */

.cover-home {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  }
}

.cover-home-left {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 3;
  height: 100%;
  width: 100%;
  background-image: url("assets/Left.png");
  background-size: cover;
  background-position: left;
}

.cover-home-right {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  height: 100%;
  width: 100%;
  background-image: url("assets/Right.png");
  background-size: cover;
  background-position: right;
}

.cover-home-logo {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 4;
  height: 100%;
  width: 100%;
  background-image: url("assets/Logo-Sticker.png");
  background-size: cover;
  background-position: center;
}

.cover-home-front {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 4;
  height: 100%;
  width: 100%;
  background-image: url("assets/Front.png");
  background-size: cover;
}

.cover-home-background {
  position: absolute;
  z-index: 1;
  height: 100%;
  width: 90%;
  background-image: url("assets/Background.png");
  background-size: cover;
  background-position: center;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.cover-text-home {
  width: 60vw;
  max-width: 1920px;
  display: flex;
  text-align: center;
  flex-direction: column;
  justify-content: center;
  margin: 100px auto;
  color: var(--cream);
}

.cover-text-home h1{
  font-size: var(--h1-size);
  font-weight: var(--extra-bold);
  text-transform: uppercase;
  color: var(--cream);
}

.cover {
  display: flex;
  justify-content: space-evenly;
  margin: 0 auto;
  gap: 34px;
  width: 80vw;
  max-width: 1400px;
  min-height: calc(100vh - 150px);
}

.cover-text-left {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.cover-text-right {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.cover img {
  object-fit: contain;
  width: 60%;

}

.title-bar {
  padding: 50px 0;
  display: flex;
  flex-direction: column;
  max-width: 1920px;
  width: 80vw;
  margin: 0 auto;
  border-radius: 2px;

  & h1 {
    color: var(--cream);
    padding: 0 50px;
  }

}

.social-links {
  margin: 0 1em;
  display: flex;
  align-items: center;
}

.social-links a img {
  height: 34px;
  padding: 10px;
}

.social-links a img:hover {
  transform: scale(1.2);
  transition-duration: .2s;
}

.all-caps {
  text-transform: uppercase;
}

/* landing initiatives css */

#landing-initiatives {
  width: 80vw;
  max-width: 1920px;
  margin: auto;

  >.page-header {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: flex-end;


    >div {
      width: 60vw;
      max-width: 1920px;
      margin-bottom: 34px;
    }
  }
}

.page {
  padding-top: 50px;
}

.workflow {
  display: flex;
  flex-direction: column;
  gap: 100px;
  justify-content: space-between;
  margin-top: 50px;
}

.workflow-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 80px;
  padding: 50px;
  background-color: var(--blue);
  border-radius: 15px;
}

.workflow-item img {
  height: auto;
  width: clamp(300px, 40vw, 640px);
  max-width: 100%;
  object-fit: contain;
  padding: 10px 0;
}

.workflow-item div {
  align-content: center;
}

.description h2 {
  color: var(--cream);
  padding-bottom: 10px;
}

.description p{
  color: var(--cream);
  padding-bottom: 10px;
}

.reverse {
  flex-direction: row-reverse;
}

/* mobile responsiveness pls work */
@media (max-width: 900px) {
  .workflow {
    gap: 10px;
  }

  .workflow-item,
  .workflow-item.reverse {
    flex-direction: column;
    align-items: flex-start;
    padding: 20px 0;
    gap: 20px;
  }

  .workflow-item img {
    width: 100%;
    max-width: none;
    padding: 0;
  }
}

/* collaborators bar css */

.collaborators-list img {
  max-height: 89px;
  max-width: 144px;
}

/* Marquee styles */
.marquee {
  --gap: 3rem;
  position: relative;
  display: flex;
  overflow: hidden;
  user-select: none;
  gap: var(--gap);
  flex-direction: row;
}

.marquee__content {
  flex-shrink: 0;
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: var(--gap);
  min-width: 100%;
  animation: scroll 30s linear infinite;
}

@keyframes scroll {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(calc(-100% - var(--gap)));
  }
}


/* Pause on hover */
.marquee--hover-pause:hover .marquee__content {
  animation-play-state: paused;
}
/* ... */

